changed Login inputs and gradient, and fix for Starter Page menu on mobile

--- a/src/assets/styles/registration/registration.css
+++ b/src/assets/styles/registration/registration.css
@@ -60,7 +60,7 @@
         height: 70%;
         box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
         border-radius: 10px;
-        background: radial-gradient(ellipse 50% 150% at -1% 50%, #f7f7f7 58%, lightgray 60%, white 60%);
+        background: radial-gradient(ellipse 50% 150% at -1% 50%, #f7f7f7 58%, lightgray 60%, white 60.2%);
         flex-direction: row;
         justify-content: flex-start;
         min-height: 32rem;
@@ -68,10 +68,10 @@
     .plane-left {
         width: 29%;
     }     
-    .label {
+    /* .label {
         align-self: flex-start;
         margin-left: 2.5rem;
-    }
+    } */
     .div-select {
         width: 90%;
         align-self: flex-start;
@@ -95,7 +95,7 @@
         width: 100%;
         height: 100%;
         flex-direction: row;
-        background: radial-gradient(ellipse 50% 150% at -1% 50%, #f7f7f7 58%, lightgray 60%, white 60%);
+        background: radial-gradient(ellipse 50% 150% at -1% 50%, #f7f7f7 58%, lightgray 60%, white 60.2%);
         justify-content: flex-start;
         min-height: 32rem;
         flex-shrink: 0;
